# classic_crypto

./: Cargo.toml  README.md  caesar_ciphertext.txt  engima_ciphertext.txt  substitution_ciphertext.txt
examples/: enigma.rs  monoalphabetic.rs  playfair.rs  polybius.rs  spelling_alphabets.rs  transposition.rs  vigenere.rs
src/: alphabet.rs  alphabets.rs  auxiliary.rs  cipher.rs  errors.rs  glossary.rs  grid.rs  lib.rs  modulus.rs  traits.rs  vigenere.rs
src/attacks/: 1gramScores.csv  1grams.csv  1grams_data.csv  2gramScores.csv  2grams.csv  2grams_data.csv  3gramScores.csv  3grams.csv  3grams_data.csv  4gramScores.csv  4grams.csv  4grams_data.csv  attack_tests.rs  caesar_attack.rs  english_bigrams.txt  english_letter_freq.txt  english_words.txt  mod.rs  ngram_data_extract.rs  ngram_log_probability.rs  score_text.rs  scytale_attack.rs  vigenere_attack.rs
src/ciphers/: affine.rs  cipher.rs  enigma.rs  mod.rs
src/ciphers/alberti/: alberti.rs  mod.rs
src/ciphers/bazeries/: bazeries.rs  bazeries_progressive.rs  bazeries_tests.rs  m94.rs  mod.rs
src/ciphers/beaufort/: autokey.rs  beaufort.rs  beaufort_tests.rs  mod.rs  progressive_key.rs  running_key.rs
src/ciphers/chaocipher/: chaocipher.rs  chaocipher_tests.rs  mod.rs
src/ciphers/checkerboard/: mod.rs  straddling_checkerboard.rs  vic.rs  vic_checkerboard.rs
src/ciphers/composite/: adfgvx.rs  adfgx.rs  bifid.rs  block.rs  composite.rs  composite_tests.rs  mod.rs  nihilist.rs  rs44.rs  trifid.rs  vic.rs
src/ciphers/enigma/: auxiliary.rs  enigma.rs  enigma_tests.rs  mod.rs  real_rotors.rs  (+1 more)
src/codes/: mod.rs
(+92 files in other folders)
