[package]
name = "classic_crypto"
version = "0.1.0"
authors = ["SymmetricChaos <ajfraebel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.3"
rand_xoshiro = "0.6.0"
num = "0.4.0"
itertools = "0.10.0"